--- a/config.yml
+++ b/config.yml
@@ -4,15 +4,14 @@ port: 8181
 ws_path: ws   
 ws_timeup: 25 
 #DP2 launch config 
-exec_line_nix: ../Main/dp2ws_local.sh  
+exec_line_nix: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
 exec_line_win: ..\Main\dp2ws_local.bat  
-local: true 
-authenticate: false 
+local: true
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
 #connection settings
 timeout_seconds: 10
 #debug
-debug: false 
+debug: false
 
