--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
 #WS CONFIGURATION
-host: https://localhost 
-port: 8181
+host: http://localhost 
+port: 8182
 ws_path: ws   
 ws_timeup: 25 
 #DP2 launch config 
-exec_line_nix: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
+exec_line_nix: #../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
 exec_line_win: ..\Main\dp2ws_local.bat  
-local: true
+local: false
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
