--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
 #WS CONFIGURATION
 host: http://localhost 
-port: 8182
+port: 8181
 ws_path: ws   
 ws_timeup: 25 
 #DP2 launch config 
-exec_line_nix: #../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
-exec_line_win: ..\Main\dp2ws_local.bat  
-local: false
+exec_line_nix: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
+exec_line_win: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2.bat 
+local: true
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
