--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,12 @@
 #WS CONFIGURATION
 host: http://localhost 
-port: 8181
+port: 8182
 ws_path: ws   
 ws_timeup: 25 
 #DP2 launch config 
 exec_line_nix: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
 exec_line_win: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2.bat 
-local: true
+local: false
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
