--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ ws_timeup: 25
 #DP2 launch config 
 exec_line_nix: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2  
 exec_line_win: ../daisy-pipeline/assembly/target/dev-launcher/bin/pipeline2.bat 
-local: true
+local: false 
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
