--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,8 @@ ws_timeup: 25
 #DP2 launch config 
 exec_line_nix: ../pipeline-assembly/target/dev-launcher/bin/pipeline2  
 exec_line_win: ../pipeline-assembly/target/dev-launcher/bin/pipeline2.bat 
+#starts the fwk in case it is not running
+starting: true
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
