--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ ws_timeup: 25
 exec_line_nix: ../pipeline-assembly/target/dev-launcher/bin/pipeline2  
 exec_line_win: ../pipeline-assembly/target/dev-launcher/bin/pipeline2.bat 
 #starts the fwk in case it is not running
-starting: true
+starting: false 
 # ROBOT CONF
 client_key: clientid
 client_secret: supersecret
